project.ext.set("distname", "microtrafficsim")
project.ext.set("distver", "1.1.1")
project.ext.set("distrel", "1")

// filter out 'examples' subproject as it is not a 'real' java project
def javaProjects() {
    subprojects.findAll { subproject -> !(subproject.name == 'examples' || subproject.name == 'tools') }
}

configure(javaProjects()) {
    apply plugin: 'java'
    sourceCompatibility = 1.8
    targetCompatibility = 1.8

    apply plugin: 'maven'
    apply plugin: 'eclipse'

    repositories {
        mavenCentral()
    }

    // enable verbose test logging
    test.testLogging {
        events 'passed', 'skipped', 'failed'
    }
}
